src/css/blocks/woocommerce-mini-cart.scss
@use "../tools" as *;

.wc-block-mini-cart__quantity-badge {
	@include wc-cart-icon;
}

.wc-block-mini-cart__drawer .wp-block-woocommerce-mini-cart-contents {
	.wc-block-components-drawer__close-wrapper .wc-block-components-drawer__close {
		align-items: center;
		background-color: var(--wp--preset--color--base);
		display: flex;
		height: 44px;
		justify-content: center;
		margin: unset;
		padding: unset !important; // stylelint-disable-line declaration-no-important
		top: var(--wp--preset--spacing--md);
		width: 44px;

		@media (--lg) {
			top: var(--wp--preset--spacing--lg);
		}

		&:focus-visible {
			@include focus-ring;
		}

		&::before {
			@include icon("icons/x");
			color: var(--wp--preset--color--contrast);
		}

		svg {
			display: none;
		}
	}

	.wc-block-mini-cart__title {
		background-color: var(--wp--preset--color--tint-primary);
		border-bottom-style: solid;
		border-bottom-width: 1px;
		color: var(--wp--preset--color--contrast);
		font-size: var(--wp--preset--font-size--sm);
		margin: unset;
		mask-image: unset;
		padding: var(--wp--preset--spacing--xl);
		z-index: unset;
	}

	.wc-block-components-notices {
		margin: 0;
	}

	.wp-block-woocommerce-mini-cart-title-items-counter-block {
		color: var(--wp--preset--color--accent-tertiary);
		font-size: var(--wp--preset--font-size--xs);
		font-weight: var(--wp--custom--typography--font-weight--body);
	}

	.wc-block-mini-cart__items {
		padding: var(--wp--preset--spacing--xl);

		.wc-block-cart-items__row {
			&:first-child {
				padding-top: 0;
			}

			&:last-child {
				padding-bottom: 0;
			}
		}

		.wc-block-cart-item__image {
			[hidden] {
				display: none;
			}

			img {
				border-radius: calc(var(--wp--custom--global--is-rounded) * var(--wp--preset--border-radius--sm));
			}
		}

		.wc-block-cart-item__product {
			.wc-block-components-product-name {
				color: var(--wp--preset--color--contrast);
				font-size: var(--wp--preset--font-size--sm);
				font-weight: var(--wp--custom--typography--font-weight--heading);
				line-height: var(--wp--custom--typography--line-height--tight);
				margin: unset;
				text-decoration: none;
			}

			.wc-block-components-product-price {
				font-size: var(--wp--preset--font-size--xs);
				margin-top: var(--wp--preset--spacing--xs);

				.wc-block-components-product-price__regular {
					display: none;

					// stylelint-disable-next-line max-nesting-depth
					@media (--xs) {
						display: inline;
						font-size: 80%;
						margin-right: var(--wp--preset--spacing--xs);
					}
				}
			}

			.wc-block-components-product-price__value {
				margin: unset;
			}

			.wc-block-components-product-metadata__description {
				display: none;
			}

			.wc-block-components-sale-badge {
				display: none;
			}

			.wc-block-components-product-metadata {
				font-size: var(--wp--preset--font-size--xs);
				margin-bottom: unset;
				margin-top: var(--wp--preset--spacing--lg);
			}

			.wc-block-cart-item__quantity {
				margin-top: var(--wp--preset--spacing--lg);
			}

			.wc-block-components-quantity-selector {
				@include wc-quantity-selector;
			}
		}

		.wc-block-cart-item__remove-link {
			@include wc-trash-icon;
		}

		.wc-block-cart-item__total {
			.wc-block-components-product-price {
				font-size: var(--wp--preset--font-size--sm);
				font-weight: var(--wp--custom--typography--font-weight--heading);
				line-height: var(--wp--custom--typography--line-height--tight);
			}

			.wc-block-components-sale-badge {
				display: none;

				@media (--xs) {
					@include wc-sale-badge;
					margin-top: var(--wp--preset--spacing--sm);

					&:where(:not([hidden])) {
						display: inline-block;
					}
				}
			}
		}
	}

	.wc-block-mini-cart__footer {
		background-color: var(--wp--preset--color--tint-primary);
		border-color: var(--wp--custom--color--border);
		padding: var(--wp--preset--spacing--xl);

		&::after {
			content: none;
		}

		.wc-block-mini-cart__footer-subtotal {
			font-size: var(--wp--preset--font-size--lg);

			.wc-block-components-totals-item__label {
				font-size: var(--wp--preset--font-size--sm);
				font-weight: var(--wp--custom--typography--font-weight--heading);
			}

			.wc-block-components-totals-item__value {
				font-size: var(--wp--preset--font-size--sm);
				font-weight: var(--wp--custom--typography--font-weight--body);
			}

			.wc-block-components-totals-item__description {
				font-size: var(--wp--preset--font-size--sm);
				margin-top: var(--wp--preset--spacing--lg);
			}
		}
	}

	.wc-block-mini-cart__footer-actions {
		margin-top: var(--wp--preset--spacing--2-xl);
	}
}

.wc-block-mini-cart__drawer {
	font-size: inherit;

	&:where(.is-medium) table.wc-block-cart-items .wc-block-cart-items__row,
	&:where(.is-mobile) table.wc-block-cart-items .wc-block-cart-items__row,
	&:where(.is-small) table.wc-block-cart-items .wc-block-cart-items__row {
		grid-template-columns: 144px 132px;
	}
}

.wc-block-components-drawer {
	background-color: var(--wp--preset--color--base);
}

.wc-block-mini-cart__badge {
	aspect-ratio: 1 / 1;
	background-color: var(--wp--preset--color--brand-primary);
	color: var(--wp--preset--color--base);
	font-size: var(--wp--preset--font-size--xs);
	font-weight: var(--wp--custom--typography--font-weight--body);
	height: 24px;
	width: 24px;
}

.wp-block-woocommerce-empty-mini-cart-contents-block {
	.wc-block-mini-cart__empty-cart-wrapper {
		padding: var(--wp--preset--spacing--xl);

		> :first-child {
			margin-top: 0;
		}
	}
}

